--- a/css/announce.css
+++ b/css/announce.css
@@ -84,7 +84,6 @@ body{
     margin-left: auto;
 }
 .header-default nav .nav-link{
-    margin-right: 1rem;
     font-weight: 600;
 }
 .header-default nav .nav-item:last-of-type{
@@ -919,9 +918,7 @@ body{
         justify-content: center;
     }
     .header-default nav{
-        width: 100%;
-        max-width: 1600px;
-        padding: 20px 50px;
+        padding: 20px;
     }
 }
 
