--- a/css/announce.css
+++ b/css/announce.css
@@ -45,6 +45,9 @@ body{
     max-width: 400px;
     margin: 3rem auto 0;
     text-decoration: none;
+    box-shadow: 0px 2px 10px 3px rgba(0, 0, 0, 0.25);
+    -webkit-box-shadow: 0px 2px 10px 3px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 0px 2px 10px 3px rgba(0, 0, 0, 0.25);
 }
 .btn_default:hover {
     transition: .3s;
@@ -58,6 +61,16 @@ body{
     transition: .3s;                                                       
     display: inline-block;
     animation: rotation .3s linear;}
+.card-shadow{
+    box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.25)!important;
+    -webkit-box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.25)!important;
+    -moz-box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.25)!important;
+}
+.card-shadow-two{
+    box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.25)!important;
+    -webkit-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.25)!important;
+    -moz-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.25)!important;
+}
 /*Header*/
 .header-default nav{
     width: 100%;
@@ -75,12 +88,20 @@ body{
     color: #ffffff;
     border-radius: 25px;
     margin-left: 10px;
+    padding: 8px 15px !important;
+    box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.25);
+    -webkit-box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.25);
 }
 .header-default nav .btn_supernova{
     background-color: var(--supernova);
     color: var(--mineshaft);
     border-radius: 25px;
     margin-left: 10px;
+    padding: 8px 15px !important;
+    box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.25);
+    -webkit-box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.25);
 }
 .header-default nav .nav-item:last-of-type{
     margin-left: 10px;
@@ -446,6 +467,7 @@ body{
 }
 .steps-section .mascot-image{
     max-height: 620px;
+    transition: transform .3s;
 }
 .steps-section-card{
     margin-top: 3rem;
@@ -468,6 +490,13 @@ body{
     width: 170px;
     height: 170px;
     z-index: 2;
+    transition: transform .3s;
+}
+.steps-section-card-item-image:hover,
+.steps-section .mascot-image:hover,
+.advantages-section-image img:hover,
+.know-more-card-bottom img:hover{
+    transform: scale(1.03);
 }
 .steps-section-card-item-line{
     border: 1px dashed var(--supernova);
@@ -483,8 +512,6 @@ body{
     padding-left: 1rem;
     margin: auto 0;
 }
-.steps-section-card-item-description h6{}
-.steps-section-card-item-description p{}
 .steps-section .did-you-know-card{
     display: block;
     background-color: var(--jacarta);
@@ -554,6 +581,7 @@ body{
 .steps-section .did-you-know-card-block{
     padding: 30px 25px;
     color: #ffffff;
+    border-radius: 20px;
 }
 .steps-section .did-you-know-card-block-title{
     display: flex;
@@ -564,7 +592,6 @@ body{
     background-color: unset;
     border: none;
 }
-.steps-section .did-you-know-card-block-content{}
 .steps-section .did-you-know-card-block-content p{
     font-weight: 400;
     font-size: 22px;
@@ -660,10 +687,9 @@ body{
 .sales-counter-item{
     display: flex;
     align-self: center;
-    width: ;
     padding-left: 15px;
 }
-.sales-counter-item:nth-child(1 , 3) h1,
+.sales-counter-item:nth-child(1) h1,
 .sales-counter-item:last-of-type h1{
     width: 90px;
 }
@@ -671,9 +697,6 @@ body{
 .sales-counter-item:nth-child(2) h1,
 .sales-counter-item:last-of-type h1{
     width: 118px;
-}
-.sales-counter-item-three{
-    width: ;
 }
 .sales-counter-item h1{
     color: var(--jacarta);
@@ -724,6 +747,7 @@ body{
     position: absolute;
     bottom: 0;
     right: -9%;
+    transition: transform .3s;
 }
 .advantages-section-two .advantages-section-image img {
     right: 10%;
@@ -744,6 +768,10 @@ body{
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
     height: 100%;
+    transition: transform .3s;
+}
+.advantages-card-block:hover{
+    transform: translate(2px, -5px);
 }
 .advantages-card-image{
     width: 68px;
@@ -964,6 +992,7 @@ body{
 }
 .faq-section-contact{
     background: #FFF;
+    border-radius: 5px;
     box-shadow: 0px 2px 10px -3px rgba(0, 0, 0, 0.25);
     display: flex;
     max-width: 400px;
@@ -1008,6 +1037,12 @@ body{
     margin-bottom: 2rem;
     color: #333333;
 }
+.know-more-card .card {
+    transition: transform .3s;
+}
+.know-more-card .card:hover {
+    transform: scale(1.1);
+}
 .know-more-card:first-of-type .card-body{
     min-height: 270px;
 }
@@ -1030,7 +1065,9 @@ body{
     padding: 24px;
     display: flex;
 }
-.know-more-bottom-image{}
+.know-more-card-bottom img{
+    transition: transform .3s;
+}
 .know-more-bottom-content{
     display: flex;
     flex-direction: column;
@@ -1056,7 +1093,6 @@ body{
 .know-more-card-bottom .btn_default:hover{
     background-color: var(--supernova);
 }
-
 /*Responsive*/
 @media screen and (min-width: 1600px) {
     body{
