--- a/css/announce.css
+++ b/css/announce.css
@@ -1113,7 +1113,8 @@ body{
         justify-content: center;
     }
     .header-default nav{
-        padding: 20px;
+        padding: 20px 40px;
+        max-width: unset;
     }
 }
 
